Estilo de SECCIÓN ACTIVIDADES. Inclusión de Actividad 1 mediante <iframe>. Funcionalidad de show-hide para temática.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import 'quiz-style.css';
+
 /* VARIABLES
 ========================*/
 :root {
@@ -11,6 +13,8 @@
   --quaternary-bg-color: rgba(184,213,229,1);
   /*mediumblue*/
   --quinary-bg-color: rgba(73,157,197,1);
+  /*brightblue*/
+  --senary-bg-color: rgba(139,200,218,1);
 
   /*white*/
   --white-bg-color: rgba(255,255,255,1);
@@ -131,7 +135,7 @@ figure img {
   background: var(--quaternary-bg-color);
   padding: 1em;
 }
-  .fasc-subject .fasc-subject-info .fasc-lesson {
+  .fasc-subject .fasc-lesson {
     background: var(--quinary-bg-color);
     border-radius: 0.2em 0.2em 0 0;
     color: white;
@@ -139,7 +143,7 @@ figure img {
     margin-bottom: 0;
     padding: 0.5em;
   }
-  .fasc-subject .fasc-subject-info .fasc-subject-name {
+  .fasc-subject .fasc-subject-name {
     background: var(--white-bg-color);
     border-bottom: 2px solid var(--quinary-bg-color);
     color: var(--main-bg-color);
@@ -162,6 +166,25 @@ figure img {
 
 /* SECCIÓN ACTIVIDADES
 ========================*/
+.fasc-quizzes {
+  background: var(--senary-bg-color);
+}
+  .fasc-quizzes .fasc-activity-name {
+    background: var(--main-bg-color);
+    color: var(--white-bg-color);
+    margin-top: 0;
+    margin-bottom: 0;
+    padding:0.5em;
+  }
+  .fasc-quizzes .quiz-instruction {
+    background: var(--white-bg-color);
+    display: block;
+    color: var(--main-bg-color);
+    font-size: 0.9em;
+    margin-bottom: 2em;
+    padding: 0.5em;
+  }
+
 
 
 /* SECCIÓN AUTOEVALUACIÓN
@@ -174,6 +197,7 @@ figure img {
   body {
     font-size: 14px;
   }
+
   /* portada */
   .fasc-cover-page {
     display:block;
@@ -185,6 +209,7 @@ figure img {
     height: 200px;
     width: 100%;
   }
+
   /* temática */
   .fasc-subject {
     padding: 0.5em 0;
@@ -202,6 +227,7 @@ figure img {
   body {
     font-size: 12px;
   }
+
   /* portada */
   .fasc-cover-page {
     display:block;
