Inclusión de Actividad 2 y 3 mediante <iframe>. Creación de quizzes: complete-word-quiz y true-false-quiz (con respectivos templates). Generación de archivo css quiz-style, por si los quizzes no se cargan mediante iframe y se incluye código de actividad directo (enlace de style.css mediante @import

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,12 @@ figure img {
     padding: 0.5em;
   }
 
+  .fasc-quizzes .media-and-quiz {
+  }
+
+  .fasc-quizzes .media-and-quiz .quiz-media-support {
+    text-align: center;
+  }
 
 
 /* SECCIÓN AUTOEVALUACIÓN
