--- a/quizzes/templates/true-false-quiz-template.html
+++ b/quizzes/templates/true-false-quiz-template.html
@@ -15,7 +15,7 @@
 
   * {  font-family: 'Roboto', sans-serif; }
 
-  .quiz-true-false-quiz {
+  .true-false-quiz {
     margin: 0 auto;
     width: 800px;
   }
@@ -101,7 +101,7 @@
 
   <!-- QUIZ
    ================================================== -->
-  <div class="quiz-true-false-quiz">
+  <div class="true-false-quiz">
 
     <!-- QUIZ BOARD
      ================================================== -->
